--- a/app/templates/new_song.html
+++ b/app/templates/new_song.html
@@ -6,16 +6,19 @@
 
 <h3>Load new Spotify song by ID, URI</h3>
 <form action="/new_song_m1" method="post">
-    <label for="spotify_id">Spotify ID:</label><br>
-    <input type="text" name="spotify_id" value="" required /><br>
+    <div class="form-group">
+        <label for="spotify_id">Spotify ID:</label><br>
+        <input type="text" name="spotify_id" id="spotify_id" value="" required /><br>
 
-    <label for="genre">Genre:</label><br>
-    <input type="text" name="genre" value="" /><br>
-    <input type="submit"><br><br>
+        <label for="genre">Genre:</label><br>
+        <input type="text" name="genre" value="" /><br><br>
+        <input type="submit" class="btn btn-outline-info"><br><br>
+    </div>
 </form>
 
 <h3>Load new audio file from WWW</h3>
 <form action="/new_song_m2" method="post">
+    <div class="form-group">
     <label for="name">Name:</label><br>
     <input type="text" name="name" value="" required /><br>
 
@@ -23,8 +26,9 @@
     <input type="text" name="url" value="" required /><br>
 
     <label for="genre">Genre:</label><br>
-    <input type="text" name="genre" value="" /><br>
-    <input type="submit"><br><br>
+    <input type="text" name="genre" value="" /><br><br>
+    <input type="submit" class="btn btn-outline-info"><br><br>
+    </div>
 </form>
 
 {% endblock %}
