--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,8 +25,10 @@
         <!-- Page Content  -->
         <div id="content">
             {% include 'include/topnav.html' %}
+          <div class="container">
             {% block page_content %}
             {% endblock %}
+          </div>
         </div>
     </div>
     <div class="overlay"></div>
