--- a/app/templates/new_song.html
+++ b/app/templates/new_song.html
@@ -20,13 +20,13 @@
 <form action="/new_song_m2" method="post">
     <div class="form-group">
     <label for="name">Name:</label><br>
-    <input type="text" name="name" value="" required /><br>
+    <input type="text" name="name" id="name" value="" required /><br>
 
     <label for="url">URL:</label><br>
-    <input type="text" name="url" value="" required /><br>
+    <input type="text" name="url" id="url" value="" required /><br>
 
     <label for="genre">Genre:</label><br>
-    <input type="text" name="genre" value="" /><br><br>
+    <input type="text" name="genre" id="genre" value="" /><br><br>
     <input type="submit" class="btn btn-outline-info"><br><br>
     </div>
 </form>
